Including function to find user type by PASSENGER
